fixed layout issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,7 @@
+.footer {
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
 .footer-links{
     background: black;
     color: white;
