--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,24 @@ footer {
     grid-template-areas: "header header" "nav main" "nav footer";
   }
 } */
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: 'Lexend', sans-serif;
   /* font-family: 'Roboto', sans-serif; */
   margin: 0;
   padding: 0;
 }
-/* #root {
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-} */
+ #root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+} 
+.content{
+    flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
+  margin-top: 16px;
+}
